# mlbc

./: .gitignore  README.md  car_price.py  pyproject.toml
data/: housing.org  test.csv  test.org
mlbc/general/: utils.py
org/: chapter2.html  chapter2.org  mlbc-notes.org  notebook.org
src/: churn_serving.py
tests/: test_mlbc.py
