[tool.poetry]
name = "mlbc"
version = "0.1.0"
description = ""
authors = ["Joost Kremers <joostkremers@fastmail.fm>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.4"
pandas = "^1.1.4"
matplotlib = "^3.3.3"
seaborn = "^0.11.0"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]
ipython = "^7.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
